--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/ebbollman/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
