--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@ div.tocify {
 </div>
 
 
-<div id="this-is-jeffs-awesome-website" class="section level1">
-<h1>This is Jeff’s awesome website</h1>
-<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /> ## Links</p>
+<div id="this-is-brennans-awesome-website" class="section level1">
+<h1>This is Brennan’s awesome website</h1>
+<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <p>Let’s link to useful tools for data science.</p>
 <ul>
 <li><a href="https://www.google.com">Google</a></li>
@@ -392,7 +392,11 @@ div.tocify {
 <div id="local-image" class="section level2">
 <h2>Local image</h2>
 <p>Here’s my hike in vermont.</p>
-<p><img src="images/vermont.jpeg" /></p>
+<p><img src="images/vermont.jpeg" style="width:75%"></p>
+</div>
+<div id="second-picture" class="section level2">
+<h2>Second picture</h2>
+<p><img src="images/wedding.jpeg" /></p>
 </div>
 <div id="link-to-page-within-the-site" class="section level2">
 <h2>Link to page within the site</h2>
